--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,59 @@
-joblib==1.1.0
-numpy==1.22.2
-pandas==1.4.0
-python-dateutil==2.8.2
-pytz==2021.3
-scikit-learn==1.0.2
-scipy==1.8.0
-six==1.16.0
-threadpoolctl==3.1.0
+appnope
+asttokens
+backcall
+black
+clic
+comm
+contourpy
+cycler
+debugpy
+decorator
+executing
+fonttools
+importlib-metadata
+importlib-resources
+ipykernel
+ipython
+jedi
+jinja2
+joblib
+jupyter_client
+jupyter_core
+kiwisolver
+matplotlib
+matplotlib-inline
+mypy-extensions
+nest-asyncio
+numpy
+packaging
+pandas
+parso
+pathspec
+pexpect
+pickleshare
+Pillow
+platformdirs
+ppscore
+prompt-toolkit
+psutil
+ptyprocess
+pure-eval
+Pygments
+pyparsing
+python-dateutil
+pytz
+pyzmq
+scikit-learn
+scipy
+six
+stack-data
+threadpoolctl
+tomli
+torch
+torchvision
+torchaudio
+tornado
+traitlets
+typing_extensions
+wcwidth
+zipp
